完成了登录功能，添加了发现音乐里面的个性、排行榜页面，完成了歌单页面的组件

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -32,7 +32,10 @@ h6 {
     margin: 0;
     padding: 0
 }
-
+body{
+    font-family: "NotoSerifSC-Medium", sans-serif;
+    
+}
 h1,
 h2,
 h3,
@@ -289,6 +292,9 @@ th {
 .right {
     float: right;
 }
+.left{
+    float: left;
+}
 
 /* 清除边距塌陷和浮动 */
 .clearfix::after,
@@ -337,6 +343,11 @@ th {
 .flex_center {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.flex_y_center{
+    display: flex;
     align-items: center;
 }
 
