--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -100,7 +100,7 @@ th {
 }
 
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: NotoSerifSC-Medium,Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
